@@ -10,7 +10,7 @@ $rel_path = "..";
 //--------------------------------------------------------------------
 // load some global definitions
 //--------------------------------------------------------------------
-include($rel_path."/definitions.inc");
+if (strlen("$navigation_check") == 0) include($rel_path."/definitions.inc");
 
 //--------------------------------------------------------------------
 // Site definitions
